tdf#88657 calculate denominator length

Get length of denominator which could be different from numerator length

Change-Id: I9f5c10917185eb029d52efbc0f20be5f81c74d10
Reviewed-on: https://gerrit.libreoffice.org/24712
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>